<resources>
    <string name="app_name">Game score app</string>
    <string name="teams_names_form_title">Enter team`s names</string>
    <string name="first_team_name_field_hint">Enter first team`s name</string>
    <string name="second_team_name_field_hint">Enter second team`s name</string>
    <string name="confirm_button_text">OK</string>
    <string name="time_form_title">Enter the time</string>
    <string name="minutes_field_hint">Minutes</string>
    <string name="seconds_field_hint">Seconds</string>
    <string name="incorrect_input_dialog_title">Incorrect input</string>
    <string name="empty_field_error_dialog_message">You should fill all fields!</string>
    <string name="start_timer_button_text">Start</string>
    <string name="stop_timer_button_text">Stop</string>
    <string name="score_increment_button_text">+</string>
    <string name="score_decrement_button_text">-</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="positive_button_text">Yes</string>
    <string name="negative_button_text">No</string>
    <string name="confirm_dialog_title">Confirm action</string>
    <string name="confirm_cancel_dialog_question">Do you really want to cancel?</string>
    <string name="winner_title">Winner</string>
    <string name="loser_title">Loser</string>
    <string name="game_score_title">Game score</string>
    <string name="new_game_button_text">New game</string>
    <string name="show_winners_list_button_text">List of winners</string>
    <string name="time_over_dialog_title">Time is over!</string>
    <string name="draw_result_dialog_message">The result is draw!</string>
    <string name="empty_winners_list_message">The list of winners is empty</string>
    <string name="list_of_winners_title">List of winners</string>
    <string name="clear_list_button_text">Clear list</string>
    <string name="back_button_text">Back</string>
    <string name="confirm_clear_dialog_message">Do you really want to clear list of winners?</string>
    <string name="time_field_default_value">0</string>
    <string name="empty_field_error_dialog_tag">EMPTY_FIELD_ERROR_DIALOG</string>
    <string name="confirm_cancel_dialog_tag">CONFIRM_CANCEL_DIALOG</string>
    <string name="game_result_dialog_tag">GAME_RESULT_DIALOG</string>
    <string name="clear_winners_list_confirm_dialog_tag">CLEAR_LIST_CONFIRM_DIALOG</string>
    <string name="same_names_error_message">Teams shouldn`t have same names!</string>
    <string name="same_names_error_dialog_tag">SAME_NAMES_ERROR_DIALOG</string>
    <string name="share_result_text">
        Winner: %1$s\n
        Loser: %2$s\n
        Score: %3$d:%4$d\n
    </string>
    <string name="share_draw_result_text">
        First team: %1$s\n
        Second team: %2$s\n
        Score: %3$d:%4$d\n
    </string>
    <string name="share_intent_chooser_text">Choose email client</string>
    <string name="score_delimiter">:</string>
    <string name="share_result_confirm_dialog_title">Confirm sending</string>
    <string name="share_result_confirm_dialog_question">Do you really want to share result?</string>
    <string name="share_result_confirm_dialog_tag">SHARE_RESULT_CONFIRM_DIALOG</string>
    <string name="share_button_text">Share result</string>
    <string name="share_draw_result_confirm_dialog_title">Confirm sending</string>
    <string name="share_draw_result_confirm_dialog_question">Do you want to share result?</string>
</resources>