<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/champagne"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/tvTeamsNamesFormTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="48dp"
        android:text="@string/teams_names_form_title"
        android:textColor="@color/steel_gray"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etFirstTeamName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:hint="@string/first_team_name_field_hint"
        android:inputType="text"
        android:maxLength="32"
        android:maxLines="1"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@id/tvTeamsNamesFormTitle"
        app:layout_constraintRight_toRightOf="@id/tvTeamsNamesFormTitle"
        app:layout_constraintTop_toBottomOf="@id/tvTeamsNamesFormTitle" />


    <EditText
        android:id="@+id/etSecondTeamName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:hint="@string/second_team_name_field_hint"
        android:inputType="text"
        android:maxLength="32"
        android:maxLines="1"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@id/etFirstTeamName"
        app:layout_constraintRight_toRightOf="@id/etFirstTeamName"
        app:layout_constraintTop_toBottomOf="@id/etFirstTeamName" />

    <TextView
        android:id="@+id/tvTimeFormTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="48dp"
        android:text="@string/time_form_title"
        android:textColor="@color/steel_gray"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/etSecondTeamName"
        app:layout_constraintRight_toRightOf="@id/etSecondTeamName"
        app:layout_constraintTop_toBottomOf="@id/etSecondTeamName" />

    <EditText
        android:id="@+id/etMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:digits="0123456789"
        android:hint="@string/minutes_field_hint"
        android:inputType="number"
        android:maxLength="3"
        android:maxLines="1"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:textAlignment="viewEnd"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="@id/tvTimeFormTitle"
        app:layout_constraintRight_toLeftOf="@id/etSeconds"
        app:layout_constraintTop_toBottomOf="@id/tvTimeFormTitle" />

    <EditText
        android:id="@+id/etSeconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:digits="0123456789"
        android:hint="@string/seconds_field_hint"
        android:inputType="number"
        android:maxLength="2"
        android:maxLines="1"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:textAlignment="viewEnd"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/etMinutes"
        app:layout_constraintRight_toRightOf="@id/tvTimeFormTitle"
        app:layout_constraintTop_toBottomOf="@id/tvTimeFormTitle" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="160dp"
        android:layout_marginBottom="160dp"
        android:backgroundTint="@color/steel_gray"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/confirm_button_text"
        android:textAllCaps="false"
        android:textColor="@color/champagne"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@id/etMinutes"
        app:layout_constraintRight_toRightOf="@id/etSeconds"
        app:layout_constraintTop_toBottomOf="@id/tvTimeFormTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>