<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/champagne"
    tools:context=".activities.WinnerActivity">

    <TextView
        android:id="@+id/tvWinnerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/winner_title"
        android:textColor="@color/steel_gray"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWinnerTeamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/steel_gray"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@id/tvWinnerTitle"
        app:layout_constraintRight_toRightOf="@id/tvWinnerTitle"
        app:layout_constraintTop_toBottomOf="@id/tvWinnerTitle"
        tools:text="@tools:sample/full_names" />

    <TextView
        android:id="@+id/tvLoserTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/loser_title"
        android:textColor="@color/steel_gray"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/tvWinnerTeamName"
        app:layout_constraintRight_toRightOf="@id/tvWinnerTeamName"
        app:layout_constraintTop_toBottomOf="@id/tvWinnerTeamName" />

    <TextView
        android:id="@+id/tvLoserTeamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/steel_gray"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@id/tvLoserTitle"
        app:layout_constraintRight_toRightOf="@id/tvLoserTitle"
        app:layout_constraintTop_toBottomOf="@id/tvLoserTitle"
        tools:text="@tools:sample/full_names" />

    <TextView
        android:id="@+id/tvGameScoreTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/game_score_title"
        android:textColor="@color/steel_gray"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/tvLoserTeamName"
        app:layout_constraintRight_toRightOf="@id/tvLoserTeamName"
        app:layout_constraintTop_toBottomOf="@id/tvLoserTeamName" />

    <TextView
        android:id="@+id/tvGameScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/steel_gray"
        android:textSize="32sp"
        app:layout_constraintLeft_toLeftOf="@id/tvGameScoreTitle"
        app:layout_constraintRight_toRightOf="@id/tvGameScoreTitle"
        app:layout_constraintTop_toBottomOf="@id/tvGameScoreTitle"
        tools:text="@tools:sample/date/hhmm" />

    <Button
        android:id="@+id/btnNewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/steel_gray"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/new_game_button_text"
        android:textAllCaps="false"
        android:textColor="@color/champagne"
        app:layout_constraintLeft_toLeftOf="@id/tvGameScore"
        app:layout_constraintRight_toLeftOf="@id/btnShowWinnersList"
        app:layout_constraintTop_toBottomOf="@id/tvGameScore" />

    <Button
        android:id="@+id/btnShowWinnersList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/steel_gray"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/show_winners_list_button_text"
        android:textAllCaps="false"
        android:textColor="@color/champagne"
        app:layout_constraintLeft_toRightOf="@id/btnNewGame"
        app:layout_constraintRight_toRightOf="@id/tvGameScore"
        app:layout_constraintTop_toBottomOf="@id/tvGameScore" />
</androidx.constraintlayout.widget.ConstraintLayout>