<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/champagne"
    tools:context=".activities.WinnersListActivity">

    <TextView
        android:id="@+id/tvEmptyWinnersListMessage"
        style="@style/TextView"
        android:paddingHorizontal="@dimen/empty_winners_list_message_text_view_paddingHorizontal"
        android:text="@string/empty_winners_list_message"
        android:textAlignment="center"
        android:textSize="@dimen/empty_winners_list_message_text_view_textSize"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWinnersListTitle"
        style="@style/TextViewTitle"
        android:layout_marginTop="@dimen/title_text_view_marginTop"
        android:text="@string/winners_list_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvWinnersList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/winners_list_recycler_view_marginTop"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        app:layout_constraintLeft_toLeftOf="@id/tvWinnersListTitle"
        app:layout_constraintRight_toRightOf="@id/tvWinnersListTitle"
        app:layout_constraintTop_toBottomOf="@id/tvWinnersListTitle"
        app:layout_constraintVertical_weight="1" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="btnClear, btnBack" />

    <Button
        android:id="@+id/btnClear"
        style="@style/Button"
        android:layout_marginVertical="@dimen/clear_button_marginVertical"
        android:text="@string/clear_list_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btnBack" />


    <Button
        android:id="@+id/btnBack"
        style="@style/Button"
        android:layout_marginVertical="@dimen/back_button_marginVertical"
        android:text="@string/back_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupWinnersListViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="btnClear, tvWinnersListTitle, rvWinnersList" />
</androidx.constraintlayout.widget.ConstraintLayout>