<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/champagne"
    tools:context=".activities.ScoreActivity">

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:textColor="@color/steel_gray"
        android:textSize="64sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@tools:sample/date/hhmm" />

    <Button
        android:id="@+id/btnStartTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:backgroundTint="@color/steel_gray"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/start_timer_button_text"
        android:textAllCaps="false"
        android:textColor="@color/champagne"
        app:layout_constraintLeft_toLeftOf="@id/tvTimer"
        app:layout_constraintRight_toLeftOf="@id/btnStopTimer"
        app:layout_constraintTop_toBottomOf="@id/tvTimer" />

    <Button
        android:id="@+id/btnStopTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:backgroundTint="@color/steel_gray"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/stop_timer_button_text"
        android:textAllCaps="false"
        android:textColor="@color/champagne"
        app:layout_constraintLeft_toRightOf="@id/btnStartTimer"
        app:layout_constraintRight_toRightOf="@id/tvTimer"
        app:layout_constraintTop_toBottomOf="@id/tvTimer" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="btnStartTimer, btnStopTimer" />

    <TextView
        android:id="@+id/tvFirstTeamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="@color/steel_gray"
        android:textSize="32sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier1"
        tools:text="First team`s name" />

    <TextView
        android:id="@+id/tvFirstTeamScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="0"
        android:textColor="@color/steel_gray"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@id/tvFirstTeamName"
        app:layout_constraintRight_toRightOf="@id/tvFirstTeamName"
        app:layout_constraintTop_toBottomOf="@id/tvFirstTeamName" />

    <Button
        android:id="@+id/btnFirstTeamScoreIncrement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:backgroundTint="@color/steel_gray"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/score_increment_button_text"
        android:textAllCaps="false"
        android:textColor="@color/champagne"
        app:layout_constraintLeft_toLeftOf="@id/tvFirstTeamScore"
        app:layout_constraintRight_toLeftOf="@id/btnFirstTeamScoreDecrement"
        app:layout_constraintTop_toBottomOf="@id/tvFirstTeamScore" />

    <Button
        android:id="@+id/btnFirstTeamScoreDecrement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:backgroundTint="@color/steel_gray"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/score_decrement_button_text"
        android:textAllCaps="false"
        android:textColor="@color/champagne"
        app:layout_constraintLeft_toRightOf="@id/btnFirstTeamScoreIncrement"
        app:layout_constraintRight_toRightOf="@id/tvFirstTeamScore"
        app:layout_constraintTop_toBottomOf="@id/tvFirstTeamScore" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="btnFirstTeamScoreIncrement, btnFirstTeamScoreDecrement" />

    <TextView
        android:id="@+id/tvSecondTeamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="@color/steel_gray"
        android:textSize="32sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier2"
        tools:text="Second team`s name" />

    <TextView
        android:id="@+id/tvSecondTeamScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="0"
        android:textColor="@color/steel_gray"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@id/tvSecondTeamName"
        app:layout_constraintRight_toRightOf="@id/tvSecondTeamName"
        app:layout_constraintTop_toBottomOf="@id/tvSecondTeamName" />

    <Button
        android:id="@+id/btnSecondTeamScoreIncrement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:backgroundTint="@color/steel_gray"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/score_increment_button_text"
        android:textAllCaps="false"
        android:textColor="@color/champagne"
        app:layout_constraintLeft_toLeftOf="@id/tvSecondTeamScore"
        app:layout_constraintRight_toLeftOf="@id/btnSecondTeamScoreDecrement"
        app:layout_constraintTop_toBottomOf="@id/tvSecondTeamScore" />

    <Button
        android:id="@+id/btnSecondTeamScoreDecrement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:backgroundTint="@color/steel_gray"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/score_decrement_button_text"
        android:textAllCaps="false"
        android:textColor="@color/champagne"
        app:layout_constraintLeft_toRightOf="@id/btnSecondTeamScoreIncrement"
        app:layout_constraintRight_toRightOf="@id/tvSecondTeamScore"
        app:layout_constraintTop_toBottomOf="@id/tvSecondTeamScore" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="btnSecondTeamScoreIncrement,btnSecondTeamScoreDecrement" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/steel_gray"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/cancel_button_text"
        android:textAllCaps="false"
        android:textColor="@color/champagne"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier3" />
</androidx.constraintlayout.widget.ConstraintLayout>